fix a layout issue in term loop * fixes a floating issue if the featured image thumbnail is higher than the excerpt

--- a/source/scss/layout.scss
+++ b/source/scss/layout.scss
@@ -15,6 +15,11 @@
  * Loop
  */
 .wppedia-page {
+	.wppedia-loop-wrapper {
+		.wppedia_term {
+			overflow: hidden;
+		}
+	}
 	.wppedia-thumbnail-wrapper {
 		float: left;
 		clear: left;
